--- a/styles/style.css
+++ b/styles/style.css
@@ -249,11 +249,14 @@ header {
     width: 100%;
 }
 
-.speciality-image .speciality-btn {
-    padding: 45px 42px;
+.speciality-btn{
     position: relative;
     left: -92px;
     top: -100px;
+}
+
+.speciality-image .speciality-btn button {
+    padding: 45px 42px;  
     background-color: #FF900E;
     border-radius: 8px;
     padding: 20px 25px;
